crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_map_reverse.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "format!(\"{}\\n--- isolated pass\\n{}\", fixture.code_snapshot(),\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
mapData (unMapData (con data (Map [(I 7, I 7)])))
--- unoptimized UPLC
(program 1.1.0
  [(builtin mapData) [(builtin unMapData) (con data (Map [(I 7, I 7)]))]])
--- optimized Core
let anf#1 : list (pair Data Data) = unMapData (con data (Map [(I 7, I 7)])) in
mapData anf#1
--- optimized UPLC
(program 1.1.0
  [(lam anf_2 [(builtin mapData) anf_2])
    [(builtin unMapData) (con data (Map [(I 7, I 7)]))]])
--- isolated pass
--- core before
mapData (unMapData (con data (Map [(I 7, I 7)])))
--- uplc before
(program 1.1.0
  [(builtin mapData) [(builtin unMapData) (con data (Map [(I 7, I 7)]))]])
--- core after
(con data (Map [(I 7, I 7)]))
--- uplc after
(program 1.1.0 (con data (Map [(I 7, I 7)])))
--- result
(con data (Map [(I 7, I 7)]))
--- logs
[]
