crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_map_trace.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
unMapData (mapData (trace "operand" in (con (list (pair data data)) [((I 7), (I 7))])))
--- unoptimized UPLC
(program 1.1.0
  [(builtin unMapData)
    [(builtin mapData)
      (force
        [[(force (builtin trace)) (con string "operand")]
          (delay (con (list (pair data data)) [((I 7), (I 7))]))])]])
--- optimized Core
trace "operand" in (con (list (pair data data)) [((I 7), (I 7))])
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force
      [[builtin_1 (con string "operand")]
        (delay (con (list (pair data data)) [((I 7), (I 7))]))]))
    (force (builtin trace))])
--- isolated pass
--- core before
unMapData (mapData (trace "operand" in (con (list (pair data data)) [((I 7), (I 7))])))
--- uplc before
(program 1.1.0
  [(builtin unMapData)
    [(builtin mapData)
      (force
        [[(force (builtin trace)) (con string "operand")]
          (delay (con (list (pair data data)) [((I 7), (I 7))]))])]])
--- core after
trace "operand" in (con (list (pair data data)) [((I 7), (I 7))])
--- uplc after
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "operand")]
      (delay (con (list (pair data data)) [((I 7), (I 7))]))]))
--- result
(con (list (pair data data)) [((I 7), (I 7))])
--- logs
["operand"]
