crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_map_unknown_invalid.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
(\unknown#16 : list (pair Data Data) -> unMapData (mapData unknown#16)) false
--- unoptimized UPLC
(program 1.1.0
  [(lam unknown_16 [(builtin unMapData) [(builtin mapData) unknown_16]])
    (con bool False)])
--- optimized Core
let anf#2 : Data = mapData false in
unMapData anf#2
--- optimized UPLC
(program 1.1.0
  [(lam anf_1 [(builtin unMapData) anf_1]) [(builtin mapData) (con bool False)]])
--- isolated pass
--- core before
(\unknown#16 : list (pair Data Data) -> unMapData (mapData unknown#16)) false
--- uplc before
(program 1.1.0
  [(lam unknown_16 [(builtin unMapData) [(builtin mapData) unknown_16]])
    (con bool False)])
--- core after
(\unknown#16 : list (pair Data Data) -> unMapData (mapData unknown#16)) false
--- uplc after
(program 1.1.0
  [(lam unknown_16 [(builtin unMapData) [(builtin mapData) unknown_16]])
    (con bool False)])
--- result
error: Runtime(ExpectedList(Boolean(false)))
--- logs
[]
