crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_utf8_bound_invalid.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
let x#17 : string = trace "operand" in false in
let encoded#18 : bytes = encodeUtf8 x#17 in
trace "must not run" in decodeUtf8 encoded#18
--- unoptimized UPLC
(program 1.1.0
  [(lam x_17
    [(lam encoded_18
      (force
        [[(force (builtin trace)) (con string "must not run")]
          (delay [(builtin decodeUtf8) encoded_18])]))
      [(builtin encodeUtf8) x_17]])
    (force
      [[(force (builtin trace)) (con string "operand")] (delay (con bool False))])])
--- optimized Core
let x#1 : string = trace "operand" in false in
let encoded#2 : bytes = encodeUtf8 x#1 in
trace "must not run" in decodeUtf8 encoded#2
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam x_3
      [(lam encoded_4
        (force
          [[builtin_5 (con string "must not run")]
            (delay [(builtin decodeUtf8) encoded_4])]))
        [(builtin encodeUtf8) x_3]])
      (force [[builtin_5 (con string "operand")] (delay (con bool False))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let x#17 : string = trace "operand" in false in
let encoded#18 : bytes = encodeUtf8 x#17 in
trace "must not run" in decodeUtf8 encoded#18
--- uplc before
(program 1.1.0
  [(lam x_17
    [(lam encoded_18
      (force
        [[(force (builtin trace)) (con string "must not run")]
          (delay [(builtin decodeUtf8) encoded_18])]))
      [(builtin encodeUtf8) x_17]])
    (force
      [[(force (builtin trace)) (con string "operand")] (delay (con bool False))])])
--- core after
let x#17 : string = trace "operand" in false in
let encoded#18 : bytes = encodeUtf8 x#17 in
trace "must not run" in decodeUtf8 encoded#18
--- uplc after
(program 1.1.0
  [(lam x_17
    [(lam encoded_18
      (force
        [[(force (builtin trace)) (con string "must not run")]
          (delay [(builtin decodeUtf8) encoded_18])]))
      [(builtin encodeUtf8) x_17]])
    (force
      [[(force (builtin trace)) (con string "operand")] (delay (con bool False))])])
--- result
error: Runtime(TypeMismatch(String, Boolean(false)))
--- logs
["operand"]
