crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_utf8_captured.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
let x#17 : string = trace "once" in "héllo" in
let encoded#18 : bytes = encodeUtf8 x#17 in
let alias#19 : bytes = encoded#18 in
force (delay (decodeUtf8 alias#19))
--- unoptimized UPLC
(program 1.1.0
  [(lam x_17
    [(lam encoded_18
      [(lam alias_19 (force (delay [(builtin decodeUtf8) alias_19]))) encoded_18])
      [(builtin encodeUtf8) x_17]])
    (force
      [[(force (builtin trace)) (con string "once")] (delay (con string "héllo"))])])
--- optimized Core
let x#1 : string = trace "once" in "héllo" in
let encoded#2 : bytes = encodeUtf8 x#1 in
x#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam x_3 [(lam encoded_4 x_3) [(builtin encodeUtf8) x_3]])
      (force [[builtin_5 (con string "once")] (delay (con string "héllo"))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let x#17 : string = trace "once" in "héllo" in
let encoded#18 : bytes = encodeUtf8 x#17 in
let alias#19 : bytes = encoded#18 in
force (delay (decodeUtf8 alias#19))
--- uplc before
(program 1.1.0
  [(lam x_17
    [(lam encoded_18
      [(lam alias_19 (force (delay [(builtin decodeUtf8) alias_19]))) encoded_18])
      [(builtin encodeUtf8) x_17]])
    (force
      [[(force (builtin trace)) (con string "once")] (delay (con string "héllo"))])])
--- core after
let x#17 : string = trace "once" in "héllo" in
let encoded#18 : bytes = encodeUtf8 x#17 in
let alias#19 : bytes = encoded#18 in
force (delay x#17)
--- uplc after
(program 1.1.0
  [(lam x_17
    [(lam encoded_18 [(lam alias_19 (force (delay x_17))) encoded_18])
      [(builtin encodeUtf8) x_17]])
    (force
      [[(force (builtin trace)) (con string "once")] (delay (con string "héllo"))])])
--- result
(con string "héllo")
--- logs
["once"]
