crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_utf8_decode_failure.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "format!(\"{}\\n--- isolated pass\\n{}\", fixture.code_snapshot(),\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
decodeUtf8 (encodeUtf8 (decodeUtf8 0))
--- unoptimized UPLC
(program 1.1.0
  [(builtin decodeUtf8)
    [(builtin encodeUtf8) [(builtin decodeUtf8) (con integer 0)]]])
--- optimized Core
let anf#1 : string = decodeUtf8 0 in
let anf#2 : bytes = encodeUtf8 anf#1 in
anf#1
--- optimized UPLC
(program 1.1.0
  [(lam anf_3 [(lam anf_4 anf_3) [(builtin encodeUtf8) anf_3]])
    [(builtin decodeUtf8) (con integer 0)]])
--- isolated pass
--- core before
decodeUtf8 (encodeUtf8 (decodeUtf8 0))
--- uplc before
(program 1.1.0
  [(builtin decodeUtf8)
    [(builtin encodeUtf8) [(builtin decodeUtf8) (con integer 0)]]])
--- core after
decodeUtf8 0
--- uplc after
(program 1.1.0 [(builtin decodeUtf8) (con integer 0)])
--- result
error: Runtime(TypeMismatch(ByteString, Integer(0)))
--- logs
[]
